--- a/src/@fuse/components/navigation/vertical/vertical.component.html
+++ b/src/@fuse/components/navigation/vertical/vertical.component.html
@@ -25,6 +25,7 @@
                 <!-- Group -->
                 <fuse-vertical-navigation-group-item
                     [item]="item"
+                    [activeStatus] = 'item.active'
                     [name]="name"
                     [autoCollapse]="autoCollapse"></fuse-vertical-navigation-group-item>
 
