--- a/src/app/modules/admin/apps/chat/chats/chats.component.html
+++ b/src/app/modules/admin/apps/chat/chats/chats.component.html
@@ -27,7 +27,7 @@
         <mat-drawer-content class="flex overflow-hidden">
 
             <!-- Chats list -->
-            <ng-container *ngIf="chats && chats.length > 0; else noChats">
+            <ng-container *ngIf="getTopics && getTopics.length > 0; else noTopic">
                 <div class="relative flex flex-auto flex-col w-full min-w-0 lg:min-w-100 lg:max-w-100 bg-card dark:bg-transparent">
 
                     <!-- Header -->
@@ -64,43 +64,43 @@
 
                     <!-- Chats -->
                     <div class="flex-auto overflow-y-auto">
-                        <ng-container *ngIf="filteredChats.length > 0; else noChats">
-                            <ng-container *ngFor="let chat of filteredChats; trackBy: trackByFn">
+                        <ng-container *ngIf="getTopics.length > 0; else noTopic">
+                            <ng-container *ngFor="let topic of getTopics; trackBy: trackByFn">
                                 <div
                                     class="z-20 flex items-center py-5 px-8 cursor-pointer border-b"
-                                    [ngClass]="{'hover:bg-gray-100 dark:hover:bg-hover': !selectedChat || selectedChat.id !== chat.id,
-                                                'bg-primary-50 dark:bg-hover': selectedChat && selectedChat.id === chat.id}"
-                                    [routerLink]="[chat.id]">
+                                    [ngClass]="{'hover:bg-gray-100 dark:hover:bg-hover': !selectedChat || selectedChat.id !== topic.id,
+                                                'bg-primary-50 dark:bg-hover': selectedChat && selectedChat.id === topic.id}"
+                                    [routerLink]="[topic.id]">
                                     <div class="relative flex flex-0 items-center justify-center w-10 h-10">
-                                        <ng-container *ngIf="chat.unreadCount > 0">
+                                        <ng-container *ngIf="topic.unreadCount > 0">
                                             <div
                                                 class="absolute bottom-0 right-0 flex-0 w-2 h-2 -ml-0.5 rounded-full ring-2 ring-bg-card dark:ring-gray-900 bg-primary dark:bg-primary-500 text-on-primary"
-                                                [class.ring-primary-50]="selectedChat && selectedChat.id === chat.id"></div>
+                                                [class.ring-primary-50]="selectedChat && selectedChat.id === topic.id"></div>
                                         </ng-container>
-                                        <ng-container *ngIf="chat.contact.avatar">
+                                        <ng-container *ngIf="topic.contact.avatar">
                                             <img
                                                 class="w-full h-full rounded-full object-cover"
-                                                [src]="chat.contact.avatar"
+                                                [src]="topic.contact.avatar"
                                                 alt="Contact avatar"/>
                                         </ng-container>
-                                        <ng-container *ngIf="!chat.contact.avatar">
+                                        <ng-container *ngIf="!topic.contact.avatar">
                                             <div class="flex items-center justify-center w-full h-full rounded-full text-lg uppercase bg-gray-200 text-gray-600 dark:bg-gray-700 dark:text-gray-200">
-                                                {{chat.contact.name.charAt(0)}}
+                                                {{topic.contact.name.charAt(0)}}
                                             </div>
                                         </ng-container>
                                     </div>
                                     <div class="min-w-0 ml-4">
-                                        <div class="font-medium leading-5 truncate">{{chat.contact.name}}</div>
+                                        <div class="font-medium leading-5 truncate">{{topic.data.name}}</div>
                                         <div
                                             class="leading-5 truncate text-secondary"
-                                            [class.text-primary]="chat.unreadCount > 0"
-                                            [class.dark:text-primary-500]="chat.unreadCount > 0">
-                                            {{chat.lastMessage}}
+                                            [class.text-primary]="topic.unreadCount > 0"
+                                            [class.dark:text-primary-500]="topic.unreadCount > 0">
+                                            {{topic.lastMessage}}
                                         </div>
                                     </div>
                                     <div class="flex flex-col items-end self-start ml-auto pl-2">
-                                        <div class="text-sm leading-5 text-secondary">{{chat.lastMessageAt}}</div>
-                                        <ng-container *ngIf="chat.muted">
+                                        <div class="text-sm leading-5 text-secondary">{{topic.lastMessageAt}}</div>
+                                        <ng-container *ngIf="topic.muted">
                                             <mat-icon
                                                 class="icon-size-5 text-hint"
                                                 [svgIcon]="'heroicons_solid:volume-off'"></mat-icon>
@@ -116,12 +116,12 @@
             </ng-container>
 
             <!-- No chats template -->
-            <ng-template #noChats>
+            <ng-template #noTopic>
                 <div class="flex flex-auto flex-col items-center justify-center h-full">
                     <mat-icon
                         class="icon-size-24"
                         [svgIcon]="'iconsmind:speach_bubble'"></mat-icon>
-                    <div class="mt-4 text-2xl font-semibold tracking-tight text-secondary">No chats</div>
+                    <div class="mt-4 text-2xl font-semibold tracking-tight text-secondary">No Topic</div>
                 </div>
             </ng-template>
 
