--- a/src/app/modules/admin/apps/chat/chats/chats.component.html
+++ b/src/app/modules/admin/apps/chat/chats/chats.component.html
@@ -70,7 +70,9 @@
                                     class="z-20 flex items-center py-5 px-8 cursor-pointer border-b"
                                     [ngClass]="{'hover:bg-gray-100 dark:hover:bg-hover': !selectedChat || selectedChat.id !== topic.id,
                                                 'bg-primary-50 dark:bg-hover': selectedChat && selectedChat.id === topic.id}"
-                                    [routerLink]="[topic.id]">
+                                    [routerLink]="[topic.id]"
+                                    (click)="getChat(topic)"
+                                    >
                                     <div class="relative flex flex-0 items-center justify-center w-10 h-10">
                                         <ng-container>
                                             <div class="flex items-center justify-center w-full h-full rounded-full text-lg uppercase bg-gray-200 text-gray-600 dark:bg-gray-700 dark:text-gray-200">
