--- a/src/app/layout/common/user-menu/user-menu.component.html
+++ b/src/app/layout/common/user-menu/user-menu.component.html
@@ -20,15 +20,8 @@
     [xPosition]="'before'"
     #userActions="matMenu">
     <button mat-menu-item>
-        <span class="flex flex-col leading-none">
-            <span>Signed in as</span>
-            <!--<span class="mt-1.5 text-md font-medium">{{user.email}}</span>-->
-        </span>
-    </button>
-    <mat-divider class="my-2"></mat-divider>
-    <button mat-menu-item>
         <mat-icon [svgIcon]="'heroicons_outline:user-circle'"></mat-icon>
-        <span>Profile</span>
+        <span>Edit Channel</span>
     </button>
     <button mat-menu-item>
         <mat-icon [svgIcon]="'heroicons_outline:cog'"></mat-icon>
@@ -45,7 +38,7 @@
         mat-menu-item
         (click)="signOut()">
         <mat-icon [svgIcon]="'heroicons_outline:logout'"></mat-icon>
-        <span>Sign out</span>
+        <span>Leave Channel</span>
     </button>
 </mat-menu>
 
