--- a/src/app/modules/admin/apps/channel/new-channel/new-channel.component.html
+++ b/src/app/modules/admin/apps/channel/new-channel/new-channel.component.html
@@ -2,7 +2,7 @@
 
     <!-- Header -->
     <div class="flex flex-0 items-center justify-between h-16 pr-3 sm:pr-5 pl-6 sm:pl-8 bg-primary text-on-primary">
-        <div class="text-lg">New Message</div>
+        <div class="text-lg">Create Channel</div>
         <button
             mat-icon-button
             (click)="saveAndClose()"
@@ -12,144 +12,231 @@
                 [svgIcon]="'heroicons_outline:x'"></mat-icon>
         </button>
     </div>
+    <div class="flex-auto mt-4 sm:mt-6">
+        <div class="w-full max-w-screen-xl mx-auto">
 
-    <div class="flex flex-col items-center">
-        <div class="flex items-center mt-3 sm:mt-4 p-0.5 rounded-full overflow-hidden bg-gray-200 dark:bg-gray-700">
-            <button
-                class="px-6"
-                [ngClass]="{'bg-card pointer-events-none shadow': yearlyBilling,
-                                'bg-transparent': !yearlyBilling}"
-                mat-flat-button
-                (click)="yearlyBilling = true"
-                disableRipple>
-                Yearly billing
-            </button>
-            <button
-                class="px-6"
-                [ngClass]="{'bg-card pointer-events-none shadow': !yearlyBilling,
-                                'bg-transparent': yearlyBilling}"
-                mat-flat-button
-                (click)="yearlyBilling = false"
-                disableRipple>
-                Monthly billing
-            </button>
+            <!-- Tabs -->
+            <mat-tab-group
+                class="sm:px-2"
+                [animationDuration]="'0'">
+
+                <!-- Home -->
+                <mat-tab label="Add Channel">
+                    <ng-template matTabContent>
+                        <form
+                            class="flex flex-col flex-auto p-6 sm:p-8 overflow-y-auto"
+                            [formGroup]="composeForm">
+
+                            <!-- To -->
+                            <mat-form-field>
+                                <mat-label>Title</mat-label>
+                                <input
+                                    matInput
+                                    [formControlName]="'title'">
+                            </mat-form-field>
+
+                            <!-- Subject -->
+                            <mat-form-field>
+                                <mat-label>Description</mat-label>
+                                <textarea
+                                    [formControlName]="'description'"
+                                    class="text-primary"
+                                    [rows]="3"
+                                    matInput></textarea>
+                            </mat-form-field>
+
+                            <div class="grid grid-cols-4 gap-6 w-full mt-8">
+                                <div class="col-span-2">
+                                    <span class="font-semibold mb-2">Type</span>
+                                    <mat-radio-group
+                                        class="flex flex-col"
+                                        [color]="'primary'"
+                                        [value]="'type'">
+                                        <mat-radio-button
+                                            class="mb-2"
+                                            [value]="'group'">
+                                            Public (to everyone)
+                                        </mat-radio-button>
+                                        <mat-radio-button
+                                            class="mb-2"
+                                            [value]="'private'">
+                                            Private (only in existing space)
+                                        </mat-radio-button>
+                                    </mat-radio-group>
+                                </div>
+
+                                <div class="col-span-2">
+                                    <span class="font-semibold mb-4">Subscribe</span>
+                                    <mat-radio-group
+                                        class="flex flex-col"
+                                        [color]="'primary'"
+                                        [value]="'subscribe'">
+                                        <mat-radio-button
+                                            class="mb-2"
+                                            [value]="'all'">
+                                            Publish in channel list
+                                        </mat-radio-button>
+                                        <mat-radio-button
+                                            class="mb-2"
+                                            [value]="'request'">
+                                            Not published(link only, invite users)
+                                        </mat-radio-button>
+                                        <mat-radio-button [value]="'invite'">
+                                            Not published(link only, invite users)
+                                        </mat-radio-button>
+                                    </mat-radio-group>
+                                </div>
+
+                                <div class="col-span-2">
+                                    <span class="font-semibold mb-2">Space</span>
+                                    <mat-radio-group
+                                        class="flex flex-col"
+                                        [color]="'primary'"
+                                        [value]="'space'">
+                                        <mat-radio-button
+                                            class="mb-2"
+                                            [value]="'public'">
+                                            Public (to everyone)
+                                        </mat-radio-button>
+                                        <mat-radio-button
+                                            class="mb-2"
+                                            [value]="'open'">
+                                            Private (only in existing space)
+                                        </mat-radio-button>
+                                    </mat-radio-group>
+                                </div>
+
+                                <div class="col-span-2">
+                                    <span class="font-semibold mb-4">Visibility</span>
+                                    <mat-radio-group
+                                        class="flex flex-col"
+                                        [color]="'primary'"
+                                        [value]="'visibility'">
+                                        <mat-radio-button
+                                            class="mb-2"
+                                            [value]="'all'">
+                                            Publish in channel list
+                                        </mat-radio-button>
+                                        <mat-radio-button
+                                            class="mb-2"
+                                            [value]="'link'">
+                                            Not published(link only, invite users)
+                                        </mat-radio-button>
+                                    </mat-radio-group>
+                                </div>
+                            </div>
+
+                            <!-- Actions -->
+                            <div class="flex items-center justify-between mt-5">
+                                <button
+                                    mat-stroked-button
+                                    (click)="resetForm()"
+                                    type="button">
+                                    Cancel
+                                </button>
+                                <button
+                                    class="ml-4"
+                                    mat-flat-button
+                                    type="button"
+                                    (click)="matDialogRef.close(['send',composeForm])"
+                                    [disabled]="composeForm.invalid"
+                                    [color]="'primary'">Submit
+                                </button>
+                            </div>
+                        </form>
+                    </ng-template>
+                </mat-tab>
+
+                <!-- Budget -->
+                <mat-tab label="Subscribe Channel">
+                    <ng-template matTabContent>
+                        <mat-table #table [dataSource]="dataSource"
+                        >
+                            <ng-container matColumnDef="id">
+                                <mat-header-cell *matHeaderCellDef class="width-80"></mat-header-cell>
+                                <mat-cell *matCellDef="let channel" class="width-80">
+                                    <mat-checkbox
+                                        [disabled]="channel.user.isSubscribed"
+                                        [checked]="channel.user.isSubscribed"
+                                        (click)="$event.stopPropagation()">
+                                    </mat-checkbox>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="name">
+                                <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                                <mat-cell *matCellDef="let channel">
+                                    <p class="text-truncate font-weight-600">{{channel.data.name}} </p>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="type">
+                                <mat-header-cell *matHeaderCellDef class="width-80">Type</mat-header-cell>
+                                <mat-cell *matCellDef="let channel" class="width-80">
+                                    <p class="email text-truncate">
+                                        {{channel.data.type}}
+                                    </p>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="users">
+                                <mat-header-cell *matHeaderCellDef class="width-80">Users</mat-header-cell>
+                                <mat-cell *matCellDef="let channel" class="width-80">
+                                    <p class="phone text-truncate">
+                                        {{channel.user.test}}
+                                    </p>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="subtitle">
+                                <mat-header-cell *matHeaderCellDef class="table-text-center"></mat-header-cell>
+                                <mat-cell *matCellDef="let channel" class="table-text-center">
+                                    <p class="job-title text-truncate">
+                                        {{channel.user.isSubscribed === true ? 'Subscribed' : ''}}
+                                    </p>
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let channel; columns: displayedColumns;"
+                                     class="contact row-point"
+                                     (click)="subscribeToChannel(channel)"
+                            >
+                            </mat-row>
+                        </mat-table>
+                        <div class="flex flex-0 flex-wrap items-center p-4 border-b bg-card justify-between"
+                             style="width: 100%">
+                            <button
+                                class="ml-5"
+                                mat-icon-button
+                                (click)="prePage(pageNum)"
+                            >
+                                <mat-icon
+                                    class="icon-size-5"
+                                    [svgIcon]="'heroicons_solid:chevron-left'"></mat-icon>
+                            </button>
+                            <div class="text-2xl font-semibold tracking-tight whitespace-nowrap">
+                                {{pageNum}} &nbsp; / &nbsp; {{totalNum}}
+                            </div>
+                            <button
+                                mat-icon-button
+                                class="mr-5"
+                                (click)="nextPage(pageNum)"
+                            >
+                                <mat-icon
+                                    class="icon-size-5"
+                                    [svgIcon]="'heroicons_solid:chevron-right'"></mat-icon>
+                            </button>
+
+                        </div>
+                    </ng-template>
+                </mat-tab>
+
+
+            </mat-tab-group>
+
         </div>
     </div>
 
-    <!-- Compose form -->
-    <form
-        class="flex flex-col flex-auto p-6 sm:p-8 overflow-y-auto"
-        [formGroup]="composeForm">
 
-        <!-- To -->
-        <mat-form-field>
-            <mat-label>To</mat-label>
-            <input
-                matInput
-                [formControlName]="'to'">
-            <div
-                class="copy-fields-toggles"
-                matSuffix>
-                <span
-                    class="text-sm font-medium cursor-pointer select-none hover:underline"
-                    *ngIf="!copyFields.cc"
-                    (click)="showCopyField('cc')">
-                    Cc
-                </span>
-                <span
-                    class="ml-2 text-sm font-medium cursor-pointer select-none hover:underline"
-                    *ngIf="!copyFields.bcc"
-                    (click)="showCopyField('bcc')">
-                    Bcc
-                </span>
-            </div>
-        </mat-form-field>
-
-        <!-- Cc -->
-        <mat-form-field
-            *ngIf="copyFields.cc">
-            <mat-label>Cc</mat-label>
-            <input
-                matInput
-                [formControlName]="'cc'">
-        </mat-form-field>
-
-        <!-- Bcc -->
-        <mat-form-field
-            *ngIf="copyFields.bcc">
-            <mat-label>Bcc</mat-label>
-            <input
-                matInput
-                [formControlName]="'bcc'">
-        </mat-form-field>
-
-        <!-- Subject -->
-        <mat-form-field>
-            <mat-label>Subject</mat-label>
-            <input
-                matInput
-                [formControlName]="'subject'">
-        </mat-form-field>
-
-        <!-- Body -->
-        <quill-editor
-            class="mt-2"
-            [formControlName]="'body'"
-            [modules]="quillModules"></quill-editor>
-
-        <!-- Actions -->
-        <div class="flex flex-col sm:flex-row sm:items-center justify-between mt-4 sm:mt-6">
-            <div class="-ml-2">
-                <!-- Attach file -->
-                <button mat-icon-button>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:paper-clip'"></mat-icon>
-                </button>
-                <!-- Insert link -->
-                <button mat-icon-button>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:link'"></mat-icon>
-                </button>
-                <!-- Insert emoji -->
-                <button mat-icon-button>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:emoji-happy'"></mat-icon>
-                </button>
-                <!-- Insert image -->
-                <button mat-icon-button>
-                    <mat-icon
-                        class="icon-size-5"
-                        [svgIcon]="'heroicons_solid:photograph'"></mat-icon>
-                </button>
-            </div>
-
-            <div class="flex items-center mt-4 sm:mt-0">
-                <!-- Discard -->
-                <button
-                    class="ml-auto sm:ml-0"
-                    mat-button
-                    (click)="discard()">
-                    Discard
-                </button>
-                <!-- Save as draft -->
-                <button
-                    class="sm:mx-3"
-                    mat-button
-                    (click)="saveAsDraft()">
-                    <span>Save as draft</span>
-                </button>
-                <!-- Send -->
-                <button
-                    class="order-first sm:order-last"
-                    mat-flat-button
-                    [color]="'primary'"
-                    (click)="send()">
-                    Send
-                </button>
-            </div>
-        </div>
-    </form>
 </div>
