added new channel function

--- a/src/app/modules/admin/apps/channel/new-channel/new-channel.component.html
+++ b/src/app/modules/admin/apps/channel/new-channel/new-channel.component.html
@@ -51,7 +51,7 @@
                                     <mat-radio-group
                                         class="flex flex-col"
                                         [color]="'primary'"
-                                        [value]="'type'">
+                                        [formControlName]="'type'">
                                         <mat-radio-button
                                             class="mb-2"
                                             [value]="'group'">
@@ -70,7 +70,7 @@
                                     <mat-radio-group
                                         class="flex flex-col"
                                         [color]="'primary'"
-                                        [value]="'subscribe'">
+                                        [formControlName]="'subscribe'">
                                         <mat-radio-button
                                             class="mb-2"
                                             [value]="'all'">
@@ -92,7 +92,7 @@
                                     <mat-radio-group
                                         class="flex flex-col"
                                         [color]="'primary'"
-                                        [value]="'space'">
+                                        [formControlName]="'space'">
                                         <mat-radio-button
                                             class="mb-2"
                                             [value]="'public'">
@@ -111,7 +111,7 @@
                                     <mat-radio-group
                                         class="flex flex-col"
                                         [color]="'primary'"
-                                        [value]="'visibility'">
+                                        [formControlName]="'visibility'">
                                         <mat-radio-button
                                             class="mb-2"
                                             [value]="'all'">
