--- a/src/app/layout/common/user-menu/user-menu.component.html
+++ b/src/app/layout/common/user-menu/user-menu.component.html
@@ -3,13 +3,9 @@
     mat-icon-button
     [matMenuTriggerFor]="userActions">
     <span class="relative">
-        <img
-            class="w-7 h-7 rounded-full"
-            *ngIf="showAvatar && user.avatar"
-            [src]="user.avatar">
         <mat-icon
             *ngIf="!showAvatar || !user.avatar"
-            [svgIcon]="'heroicons_outline:user-circle'"></mat-icon>
+            [svgIcon]="'heroicons_outline:dots-vertical'"></mat-icon>
         <span
             class="absolute right-0 bottom-0 w-2 h-2 rounded-full"
         ></span>
@@ -19,8 +15,12 @@
 <mat-menu
     [xPosition]="'before'"
     #userActions="matMenu">
-    <button mat-menu-item>
+    <button mat-menu-item *ngIf="adminStatus" (click)="editChannel(selectChannel)">
         <mat-icon [svgIcon]="'heroicons_outline:user-circle'"></mat-icon>
+        <span>Edit Channel</span>
+    </button>
+    <button mat-menu-item *ngIf="!adminStatus">
+        <mat-icon [svgIcon]="'heroicons_outline:user-circle'" disabled></mat-icon>
         <span>Edit Channel</span>
     </button>
     <button mat-menu-item>
@@ -28,8 +28,7 @@
         <span>Settings</span>
     </button>
     <button
-        mat-menu-item
-        [matMenuTriggerFor]="userStatus">
+        mat-menu-item>
         <mat-icon [svgIcon]="'heroicons_outline:dots-circle-horizontal'"></mat-icon>
         <span>Status</span>
     </button>
@@ -39,34 +38,5 @@
         (click)="signOut()">
         <mat-icon [svgIcon]="'heroicons_outline:logout'"></mat-icon>
         <span>Leave Channel</span>
-    </button>
-</mat-menu>
-
-<mat-menu
-    class="user-status-menu"
-    #userStatus="matMenu">
-    <button
-        mat-menu-item
-        (click)="updateUserStatus('online')">
-        <span class="w-4 h-4 mr-3 rounded-full bg-green-500"></span>
-        <span>Online</span>
-    </button>
-    <button
-        mat-menu-item
-        (click)="updateUserStatus('away')">
-        <span class="w-4 h-4 mr-3 rounded-full bg-amber-500"></span>
-        <span>Away</span>
-    </button>
-    <button
-        mat-menu-item
-        (click)="updateUserStatus('busy')">
-        <span class="w-4 h-4 mr-3 rounded-full bg-red-500"></span>
-        <span>Busy</span>
-    </button>
-    <button
-        mat-menu-item
-        (click)="updateUserStatus('not-visible')">
-        <span class="w-4 h-4 mr-3 rounded-full bg-gray-400"></span>
-        <span>Invisible</span>
     </button>
 </mat-menu>
