--- a/src/app/modules/admin/apps/channel/channel-setting/channel-setting.component.html
+++ b/src/app/modules/admin/apps/channel/channel-setting/channel-setting.component.html
@@ -2,7 +2,7 @@
 
     <!-- Header -->
     <div class="flex flex-0 items-center justify-between h-16 pr-3 sm:pr-5 pl-6 sm:pl-8 bg-primary text-on-primary">
-        <div class="text-lg">Edit Channel</div>
+        <div class="text-lg">Channel Setting</div>
         <button
             mat-icon-button
             (click)="saveAndClose()"
@@ -12,33 +12,31 @@
                 [svgIcon]="'heroicons_outline:x'"></mat-icon>
         </button>
     </div>
-
     <form
         class="flex flex-col flex-auto p-6 sm:p-8 overflow-y-auto"
-        [formGroup]="composeForm">
-
-        <!-- To -->
-        <mat-form-field>
-            <mat-label>Title</mat-label>
-            <input
-                matInput
-                [formControlName]="'title'">
-        </mat-form-field>
-
-        <!-- Subject -->
-        <mat-form-field>
-            <mat-label>Description</mat-label>
-            <textarea
-                [formControlName]="'description'"
-                class="text-primary"
-                [rows]="3"
-                matInput></textarea>
-        </mat-form-field>
-
+        [formGroup]="settingForm">
+        <div  *ngIf="_isSetting">
+            <mat-checkbox
+                name="isCheck"
+                [ngModel]="true"
+                (click)="changeCheckbox(_isSetting)"
+                formControlName="isCheck">
+                Channel Notification is turned on
+            </mat-checkbox>
+        </div>
+        <div  *ngIf="!_isSetting">
+            <mat-checkbox
+                name="isCheck"
+                [ngModel]="false"
+                (click)="changeCheckbox(_isSetting)"
+                formControlName="isCheck">
+                Channel Notification is turned off
+            </mat-checkbox>
+        </div>
         <div class="flex items-center justify-between mt-5">
             <button
                 mat-stroked-button
-                (click)="resetForm()"
+                (click)="channelOff()"
                 type="button">
                 Cancel
             </button>
@@ -46,12 +44,11 @@
                 class="ml-4"
                 mat-flat-button
                 type="button"
-                (click)="matDialogRef.close(['save',composeForm])"
-                [disabled]="composeForm.invalid"
+                (click)="matDialogRef.close(['save',settingForm])"
+                [disabled]="settingForm.invalid"
                 [color]="'primary'">Submit
             </button>
         </div>
     </form>
-
 
 </div>
