--- a/src/app/modules/admin/apps/topic/edit-topic/edit-topic.component.html
+++ b/src/app/modules/admin/apps/topic/edit-topic/edit-topic.component.html
@@ -49,7 +49,7 @@
                         class="ml-4"
                         mat-flat-button
                         type="button"
-                        (click)="matDialogRef.close(['addTopic',composeForm])"
+                        (click)="matDialogRef.close(['editTopic',composeForm])"
                         [disabled]="composeForm.invalid"
                         [color]="'primary'">Submit
                     </button>
