--- a/src/app/layout/common/language/language.component.html
+++ b/src/app/layout/common/language/language.component.html
@@ -29,7 +29,7 @@
         <span class="absolute inset-0 ring-1 ring-inset ring-black ring-opacity-10"></span>
         <img
             class="w-full"
-            [src]="'assets/images/flags/' + flagCodes[lang].toUpperCase() + '.svg'"
+            [src]="'assets/images/flags/' + flagCodes[lang].toUpperCase() + '.png'"
             [alt]="'Flag image for ' + lang">
     </span>
 </ng-template>
