--- a/src/app/modules/admin/apps/channel/channel-setting/channel-setting.component.html
+++ b/src/app/modules/admin/apps/channel/channel-setting/channel-setting.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col max-w-240 md:min-w-160 -m-6">
 
     <!-- Header -->
-    <div class="flex flex-0 items-center justify-between h-16 pr-3 sm:pr-5 pl-6 sm:pl-8 bg-primary text-on-primary">
-        <div class="text-lg">Channel Setting</div>
+    <div class="flex flex-0 items-center justify-between h-16 pr-3 sm:pr-5 pl-6 sm:pl-8 bg-primary text-on-primary" *transloco="let t">
+        <div class="text-lg">{{t('channel-setting')}}</div>
         <button
             mat-icon-button
             (click)="saveAndClose()"
