--- a/src/app/modules/admin/apps/channel/subscribe-channel/subscribe-channel.component.html
+++ b/src/app/modules/admin/apps/channel/subscribe-channel/subscribe-channel.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col max-w-240 md:min-w-160 -m-6">
+<div class="flex flex-col max-w-240 md:min-w-160 -m-6" *transloco="let t">
 
     <!-- Header -->
     <div class="flex flex-0 items-center justify-between h-16 pr-3 sm:pr-5 pl-6 sm:pl-8 bg-primary text-on-primary">
@@ -22,7 +22,7 @@
             <div class="-ml-2">
                 <div class="mb-3" >
                     <div>
-                        <h2 class="text-2xl mb-3">Description :</h2>
+                        <h2 class="text-2xl mb-3">{{t('other-description')}} :</h2>
                         <p>{{channelData['data']['description']}}</p>
                     </div>
                 </div>
