--- a/src/app/modules/admin/apps/topic/new-topic/new-topic.component.html
+++ b/src/app/modules/admin/apps/topic/new-topic/new-topic.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col max-w-240 md:min-w-160 -m-6">
+<div class="flex flex-col max-w-240 md:min-w-160 -m-6" *transloco="let t">
 
     <!-- Header -->
     <div class="flex flex-0 items-center justify-between h-16 pr-3 sm:pr-5 pl-6 sm:pl-8 bg-primary text-on-primary">
-        <div class="text-lg">Create Topic</div>
+        <div class="text-lg">{{t('topic-create')}}</div>
         <button
             mat-icon-button
             (click)="saveAndClose()"
@@ -21,7 +21,7 @@
 
                 <!-- To -->
                 <mat-form-field>
-                    <mat-label>Title</mat-label>
+                    <mat-label>{{t('other-title')}}</mat-label>
                     <input
                         matInput
                         [formControlName]="'title'">
@@ -29,7 +29,7 @@
 
                 <!-- Subject -->
                 <mat-form-field>
-                    <mat-label>Description</mat-label>
+                    <mat-label>{{t('other-description')}}</mat-label>
                     <textarea
                         [formControlName]="'description'"
                         class="text-primary"
