--- a/src/app/modules/admin/apps/topic/topic-status/topic-status.component.html
+++ b/src/app/modules/admin/apps/topic/topic-status/topic-status.component.html
@@ -2,7 +2,7 @@
 
     <!-- Header -->
     <div class="flex flex-0 items-center justify-between h-16 pr-3 sm:pr-5 pl-6 sm:pl-8 bg-primary text-on-primary">
-        <div class="text-lg">Topic Setting</div>
+        <div class="text-lg">Topic Status</div>
         <button
             mat-icon-button
             (click)="saveAndClose()"
